[gd_scene load_steps=2 format=3 uid="uid://erwwj620s7i1"]

[ext_resource type="Script" uid="uid://y6l6olvsfhyn" path="res://Script/item_slot.gd" id="1_i7sho"]

[node name="Item_Slot" type="Button"]
custom_minimum_size = Vector2(100, 100)
offset_right = 100.0
offset_bottom = 100.0
script = ExtResource("1_i7sho")

[node name="Panel" type="Panel" parent="."]
self_modulate = Color(0, 0, 0, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
